# json-differ

./: .gitignore  README.md  pyproject.toml
src/json_differ/: __init__.py  cli.py  differ.py  formatter.py
tests/: test_differ.py
